# audiovis

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/audiovis/: audio_capture.hpp  fft_processor.hpp  ring_buffer.hpp  spectrum_analyzer.hpp
src/: audio_capture.cpp  fft_processor.cpp  main.cpp  ring_buffer.cpp  spectrum_analyzer.cpp  terminal_renderer.cpp
tests/: CMakeLists.txt  test_fft_processor.cpp  test_ring_buffer.cpp
